# loom

./: .dockerignore  .gitignore  404.html  CLAUDE.md  DEVELOPMENT.md  DEV_PLAN.md  LICENSE  README.md  build_frontend.sh  index.html  mkdocs.yml  pyproject.toml  render.yaml
.claude/: settings.json
.claude/commands/: commit.md  test-frontend.md  test.md  validate-tensors.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: PIPELINE_AUTHORING.md  TOOLS.md  index.md  multi_pass_spec.md
docs/getting-started/: first-pipeline.md  installation.md
docs/hooks/: generate_tutorials.py
docs/reference/: cli.md  editor.md  pipeline-schema.md  task-scripts.md
docs/tutorials/: curve-fitting.md  diamond.md  groups.md  index.md  linear.md  loop.md  optional-steps.md  parallel.md  parameters.md
examples/: DEPLOY.md  Dockerfile  README.md
examples/curve-fitting/: README.md  pipeline.yml
examples/curve-fitting/tasks/: fit_curve.py  generate_data.py  plot_data.py  plot_fit.py
examples/diamond/: README.md  pipeline.yml
examples/diamond/tasks/: compute_stats.py  filter_outliers.py  generate_data.py  load_data.py  merge_results.py
examples/groups/: README.md  pipeline.yml
examples/groups/tasks/: filter_outliers.py
examples/image-processing/: README.md  pipeline.yml
examples/image-processing/tasks/: blur.py  edge_detect.py  grayscale.py
examples/linear/: README.md  pipeline.yml
examples/linear/tasks/: compute_stats.py  format_report.py  generate_data.py
examples/loop/: README.md  pipeline.yml
examples/loop/data/input/: foo.txt  greet.txt  hello.txt
examples/loop/tasks/: summarize.py  uppercase.py
examples/multi_pass/: README.md  pipeline.yml
examples/multi_pass/results/: cleaned_fine.csv  cleaned_medium.csv  quality_coarse.json  smoothed_coarse.csv  smoothed_fine.csv
examples/multi_pass/tasks/: filter_signal.py  generate_signal.py  smooth_signal.py  summarize.py
examples/optional_steps/: README.md  pipeline.yml
examples/optional_steps/tasks/: export_debug.py  generate_text.py  load_text.py  top_words.py  visualize.py  word_frequency.py
examples/parallel/: README.md  pipeline.yml
examples/parallel/tasks/: compare_results.py  generate_data.py  process.py
examples/parameters/: README.md  pipeline.yml
examples/parameters/tasks/: detect_peaks.py  generate_signal.py  smooth_signal.py
getting-started/first-pipeline/: index.html
getting-started/installation/: index.html
hooks/: generate_tutorials.py
overrides/: main.html
reference/cli/: index.html
reference/editor/: index.html
reference/pipeline-schema/: index.html
reference/task-scripts/: index.html
scripts/: build.sh  check.sh  lint.sh  run-examples.sh  test.sh
search/: search_index.json
src/loom/: __init__.py
src/loom/editor/: __init__.py  cli.py  execution.py  server.py  task_schema.py
src/loom/editor/frontend/: eslint.config.js  index.html  package-lock.json  package.json
src/loom/editor/frontend/src/: App.tsx  index.css
src/loom/editor/server/: __init__.py  endpoints.py  state.py
src/loom/runner/: __init__.py  clean.py  cli.py  config.py  executor.py  multi_pass.py  orchestrator.py  task_schema.py  url.py
src/loom/ui/: cli.py  execution.py  task_schema.py
src/loom/ui/frontend/: index.html  package-lock.json  package.json
src/loom/ui/frontend/src/: App.tsx  index.css
src/loom/ui/server/: __init__.py  endpoints.py  graph.py  models.py  state.py  terminal.py  thumbnails.py  validation.py
tests/: __init__.py  test_clean.py  test_editor_cli.py  test_editor_execution.py  test_editor_server.py  test_editor_server_endpoints.py  test_editor_thumbnails.py  test_graph_param_refs.py  test_groups_integration.py  test_multi_pass.py  test_orchestrator.py  test_runner_cli.py  test_runner_config.py  test_runner_executor.py  test_task_schema.py  test_url.py
tutorials/: index.html
tutorials/curve-fitting/: index.html
tutorials/diamond/: index.html
tutorials/groups/: index.html
tutorials/image-processing/: index.html
tutorials/linear/: index.html
tutorials/loop/: index.html
tutorials/optional-steps/: index.html
tutorials/parallel/: index.html
tutorials/parameters/: index.html
(+64 files in other folders)
