[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-pipeline"
version = "0.2.1"
description = "Visual pipeline editor and runner for task automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Relja Ljubobratovic", email = "ljubobratovic.relja@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/ljubobratovicrelja/loom"
Repository = "https://github.com/ljubobratovicrelja/loom"
Documentation = "https://ljubobratovicrelja.github.io/loom/"

[project.optional-dependencies]
ui = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=12.0",
    "ruamel.yaml>=0.18.0",
    "send2trash>=1.8.2",
    "opencv-python-headless>=4.8.0",
]
examples = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "opencv-python-headless>=4.8.0",
]
dev = [
    "loom-pipeline[ui,examples]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
loom = "loom.runner:main"
loom-ui = "loom.ui:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["loom.ui.frontend.node_modules*"]

[tool.setuptools.package-data]
"loom.ui" = ["frontend/dist/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["loom"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
# Exclude examples as they contain duplicate module names (multiple compute_stats.py, etc.)
exclude = ["examples/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
